<resources>
    <string name="app_name">Cubike</string>

    <string name="taganrog">Таганрог</string>
    <string name="rostov">Ростов-на-Дону</string>
    <string name="novocherkassk">Новочеркасск</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Карта</string>
    <string name="action_list">Список</string>
    <string name="action_update">Update</string>
    <string name="title_activity_track">TrackActivity</string>

    <!-- Labels for Main menu with cities -->
    <string name="track_count_label">Маршрутов: </string>
    <string name="points_of_interests_count_label">Достопримечательностей:\ </string>
    <string name="taganrog_desc">Таганрог - самый лучший город</string>

    <!-- Labels for View Pager -->
    <string name="view_pager_title_map">Карта</string>
    <string name="view_pager_title_list">Список</string>

    <!--Labels for DetailsActivity -->
    <string name="description_label">Описание</string>

    <string name="desc">index</string>
    <string name="logo_desc">logo_desc</string>

    <!--Values for TracksActivity -->
    <string name="duration_mins">мин</string>
    <string name="length_value">км</string>


    <string name="cities">Города</string>
    <string name="weather">Погода</string>
    <string name="favorite_tracks">Мои маршруты</string>
    <string name="user_profile">Мой профиль</string>
    <string name="user_achieves">Мои достижения</string>
    <string name="more">Ещё</string>
    <string name="about_us">О нас</string>
    <string name="settings">Настройки</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="freshman">Новичок</string>
    <string name="student">Студент</string>
    <string name="amatour">Любитель</string>
    <string name="photo">Фотограф</string>
    <string name="profi">Профи</string>
    <string name="paparazzi">Папарацци</string>

    <string name="freshman_desc">Для получения этого навыка достаточно установить приложение!</string>
    <string name="student_desc">Для получения звания "Студент" нужно сфотографировать от 1 до 5 достопримечательностей</string>
    <string name="amatour_desc">Чтобы достичь уровня "Любитель" нужно сфотографировать 10 достопримечательностей и поделиться ими с друзьями!</string>
    <string name="photo_desc">Все известные фотографы публикуют свои фото. Поделись своим шедевром с друзяьми в твиттере!</string>
    <string name="profi_desc">Сделай фотографию для каждой достопримечательности в веломаршруте и стань Профи</string>
    <string name="paparazzi_desc">Пройди все маршруты и сфотографируй каждый памятник в маршруте!</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Таганрог Раневской</string>
    <string name="title_activity_cities">CitiesActivity</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="track_not_finished_alert">Этот маршрут находится в стадии разработки </string>
    <string name="title_activity_achievment">AchievmentActivity</string>
</resources>
